--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sass": "^1.54.9"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.23.1",
     "eslint": "8.23.0",
     "eslint-config-next": "12.3.0"
   }
